<resources>
    <string name="app_name">There and Back Again</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="saveUser">Salvar Usuario</string>
    <string name="newUser">Novo Usuario</string>
    <string name="login">Fazer Login</string>
    <string name="LocationName">LocationNamePlaceholder</string>
    <string name="LocationDescription">LocationDescriptionPlaceholder</string>
    <string name="LocationCoordinatesPlaceholder">LocationCoordinatesPlaceholder</string>
    <string name="LocationDtCreated">00/00/0000</string>
    <string name="Add">Adicionar</string>
    <string name="newLocation">Novo Local</string>
    <string name="saveLocation">Salvar Local</string>
    <string name="locationName">Nome do Lugar</string>
    <string name="locationDesc">Descrição</string>
    <string name="String">String</string>
    <string name="act_bar_switch">act_bar_switch</string>

</resources>