<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewLista"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:cardCornerRadius="10sp"
    app:cardBackgroundColor="?attr/cardViewBackground"
    android:clickable="true"
    android:longClickable="true">

    <RelativeLayout
        android:id="@+id/relativeLay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingVertical="10sp"
        android:paddingHorizontal="10sp">

        <TextView
            android:id="@+id/textViewLocationName"
            android:text="@string/LocationName"
            android:textColor="?attr/colorText"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"/>

        <TextView
            android:id="@+id/textViewLocationDtCreated"
            android:text="@string/LocationDtCreated"
            android:textSize="12sp"
            android:textColor="?attr/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/textViewLocationDescription"
            android:layout_marginVertical="10sp"
            android:text="@string/LocationDescription"
            android:textSize="18sp"
            android:textColor="?attr/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLocationName"/>

        <TextView
            android:id="@+id/textViewLocationCoordinates"
            android:text="@string/LocationCoordinatesPlaceholder"
            android:textSize="12sp"
            android:textColor="?attr/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewLocationDescription"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>