<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ui.NewUserActivity">

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="TODO"
        android:src="@drawable/logo2"
        app:tint="?attr/colorText"
        android:paddingBottom="68sp"
        app:layout_constraintBottom_toBottomOf="@id/editTextNewUserEmail"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNewUserEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fields"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="8sp"
        android:paddingStart="8sp"
        android:padding="2sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNewUserPass" />

    <EditText
        android:id="@+id/editTextNewUserPass"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_fields"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="8sp"
        android:paddingStart="8sp"
        android:padding="2sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toTopOf="@+id/saveUser" />

    <Button
        android:id="@+id/saveUser"
        android:text="@string/saveUser"
        android:background="@drawable/rounded_corner_accent"
        android:onClick="newUserSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>